<resources>
    <string name="app_name">FortuneTeller</string>
    <string name="hello_world">Hello World!</string>
    <string name="pick_a_color">Pick a color!</string>
    <string name="pick_a_number_">Pick a number!</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>

    <string name="one">1</string>
    <string name="three">3</string>
    <string name="five">5</string>
    <string name="seven">7</string>


    <string name="two">2</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="eight">8</string>

    <string name="fortuneis">Your fortune is...</string>
    <string name="fortune1">A golden egg of opportunity falls into your lap this month.</string>
    <string name="fortune2">Accept something that you cannot change, and you will feel better.</string>
    <string name="fortune3">All your hard work will soon pay off.</string>
    <string name="fortune4">Be careful or you could fall for some tricks today.</string>
    <string name="fortune5">Disbelief destroys the magic.</string>
    <string name="fortune6">Fortune Not Found: Abort, Retry, Ignore?</string>
    <string name="fortune7">Help! I’m being held prisoner in the computer science building!</string>
    <string name="fortune8">The best prediction of the future is the past.</string>


</resources>
