<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.nyu.cs101.android.kbm345.DisplayNumber">

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:background="@android:drawable/alert_light_frame"
        android:onClick="newButton2From7"
        android:text="@string/seven"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/MainTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="50dp"
        android:background="@android:drawable/alert_light_frame"
        android:onClick="newButton2From5"
        android:text="@string/five"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/MainTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@android:drawable/alert_light_frame"
        android:onClick="newButton2From3"
        android:text="@string/three"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/MainTextColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:background="@android:drawable/alert_light_frame"
        android:onClick="newButton2From1"
        android:text="@string/one"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/MainTextColor"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pick_a_number_"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/MainTextColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>